# adsb-rns

./: .gitignore  README.md  project-plan.md  pyproject.toml  scratch2.ipynb
src/: placeholder.tcss  proto.py  receiver.py  receiver_app.py  scratch.ipynb  sender.py  test_proto.ipynb
